# Mnemosyne

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: mod.rs
src/core/enums/: process.rs
src/core/traits/: injectable.rs  mod.rs  openable.rs  readable.rs  writable.rs
src/mnemosyne/: mod.rs
src/mnemosyne/errors/: process.rs
src/mnemosyne/traits/: mod.rs  readable.rs  writable.rs
src/native/platform/: windows.rs
