[package]
name = "mnemosyne"
version = "0.1.0"
authors = ["Haato3o <me@haato.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2.2"